Fix TCCP APR rating icon alignment

--- a/cfgov/unprocessed/apps/tccp/css/main.less
+++ b/cfgov/unprocessed/apps/tccp/css/main.less
@@ -137,7 +137,8 @@
 .a-card-purchase-apr-rating {
   // Put the APR ratings on their own line on non-mobile devices
   @media only screen and (min-width: @bp-sm-min) {
-    display: block;
+    display: flex;
+    align-items: center;
   }
 
   .cf-icon-svg:first-of-type {
